semifix a bug che poteva far uscire le immagini dall'area visibile quando se ne riducevano le dimensioni

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ li {
 .m-auto {
     margin: auto;
 }
+.ml-auto {
+    margin-left: auto;
+}
 
 /* ==========
     TYPOGRAPHY
@@ -50,6 +53,9 @@ li {
 }
 .text-center {
     text-align: center;
+}
+.text-right {
+    text-align: right;
 }
 
 /* ==========
